added pop-up after last done mystery

--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -353,12 +353,12 @@
     margin-left: 0.5vw;
 }
 
-#sheetCardAddonsFocus {
+#sheetCardCthulhuAddonsFocus {
     border: 0.25vw solid black;
     border-radius: 3vw;
     height: 2vw;
     width: 12vw;
-    margin-top: 2vw;
+    margin-top: 23vw;
     margin-left: 1.6vw;
 }
 
