added mythos counter

--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -664,6 +664,15 @@
     z-index: 50;
 }
 
+.mythosCounterText{
+    display: flex;
+    font-family: "F1669 Elzevir W00 Normal"; 
+    font-size: 1.4vw;
+    justify-content: flex-end;
+    margin-top: 9.2vw;
+    color: rgb(200, 200, 200);
+}
+
 .mythosDefeat {
     background-image: url(/src/pictures/Mythos/Mythos_Defeat_Card.png);
     height: 11.5vw;
