--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -563,6 +563,15 @@
     z-index: 50;
 }
 
+.mysteryCounterText{
+    display: flex;
+    font-family: "F1669 Elzevir W00 Normal"; 
+    font-size: 1.2vw;
+    justify-content: flex-end;
+    margin-top: 5.5vw;
+    color: rgb(200, 200, 200);
+}
+
 #AzathothMysteryReverse {
     background-image: url(/src/pictures/MysteryCards/Ancient_Azathoth_Mystery.png);
 }
